# codesworth

./: Cargo.toml  DESIGN.md  NEXTSTEPS.md  README.md
src/: cli.rs  config.rs  error.rs  main.rs
src/core/: batch_processor.rs  context_scanner.rs  differ.rs  engine.rs  generator.rs  hierarchical_analyzer.rs  mod.rs  package_analysis.rs  package_analyzer.rs  parser.rs  protector.rs  system_overview_generator.rs  validator.rs
src/core/call_graph/: call_chain_analyzer.rs  call_chain_engine.rs  call_chain_grouper.rs  call_chain_tracer.rs  call_graph.rs  entry_point_detector.rs  mod.rs
src/core/languages/: csharp.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/core/llm/: architecture_detector.rs  documenter.rs  mod.rs  providers.rs
templates/: default.md
