[package]
name = "codesworth"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "The Documentation Generator That Actually Stays Current"
license = "Apache-2.0"
repository = "https://github.com/neural-chilli/codesworth"
readme = "README.md"
keywords = ["documentation", "code-analysis", "developer-tools"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system operations
walkdir = "2.0"
ignore = "0.4"

# Text processing
regex = "1.0"

# Hashing for content tracking
sha2 = "0.10"

# Tree-sitter for code parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-java = "0.21"
tree-sitter-python = "0.21"
tree-sitter-c-sharp = "0.21"
tree-sitter-javascript = "0.21"

# Template engine
tera = "1.19"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LLM integration
rig-core = "0.6"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.0"
assert_fs = "1.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "codesworth"
path = "src/main.rs"